--- a/robobuilder.yml
+++ b/robobuilder.yml
@@ -2,7 +2,13 @@ Version 1.5
 
 ---
 Children:
-- Children: []
+- Children:
+  - Children: []
+    Properties:
+      Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Default Command, type: Command, validators: null, value: None}
+    Base: Subsystem
+    Name: Drive
   Properties: {}
   Base: Subsystems
   Name: Subsystems
@@ -25,7 +31,7 @@ Children:
 Properties:
   Eclipse Workspace: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Edward
       Katz\workspace', extension: null, folder: true, name: Eclipse Workspace, validators: null,
-    value: ''}
+    value: .\}
   Export Commands: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Commands, validators: null, value: true}
   Java Package: !!robotbuilder.data.properties.StringProperty {default: org.usfirst.frc0000,
